--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" scr"js/app.js">
-
-    </script>
+    <script type="text/javascript" scr"js/app.js"></script>
     <title>Project 1</title>
   </head>
   <body>
-    <h1>Project 1
+    <h1>Project 1</h1>
   </body>
 </html>
