able to add new items, but they don't have the same functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
-<!DOCTYPE html>
+<!DOCTYPE><html>
+<head>
+  <title>Intermediate jQuery</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="./js/jquery-2.1.1.min.js"></script> -->
+  <script type="text/javascript" src="./js/app.js"></script>
+</head>
+<body>
+  <main>
+    <h1>Seeing Red</h1>
+    <ul class="grid">
+      <li class="red"></li>
+      <li class="green"></li>
+      <li class="black"></li>
+      <li class="red"></li>
+      <li class="orange"></li>
+      <li class="red"></li>
+      <li class="blue"></li>
+      <li class="red"></li>
+      <li class="blue"></li>
+      <li class="red"></li>
+      <li class="black"></li>
+      <li class="blue"></li>
+      <li class="green"></li>
+      <li class="red"></li>
+      <li class="blue"></li>
+      <li class="orange"></li>
+    </ul>
+    <div class="create_grid">Create Grid</div>
+  </main>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" scr"js/app.js"></script>
-    <title>Project 1</title>
+    <title>Seeing Red</title>
   </head>
   <body>
-    <h1>Project 1</h1>
+    <div class="container">
+
+    <h1 id="title"><strong>Seeing Red</strong></h1><br><br>
+
+    <p id="score"> </p><br>
+
+    <ul class="grid"></ul>
+
+  </div>
+
+  <div id="welcome"> -->
+    <!-- <p id="afterReset">choose a grid to sweep or see how to play below</p><br> -->
+
+    <!-- <div class= "grid3color" id ="threeC">3</div>
+    <div class= "grid4color" id ="fourC">4</div>
+    <div class= "grid5color" id ="fiveC">5</div>
+    <div class= "grid6color" id ="sixC">6</div>
+    <div class= "grid7color" id ="sevenC">7</div>
+    <div class= "grid8color" id ="eightC">8</div> -->
+
+    <!-- <div class= "grid10color" id ="tenbyten">10</div>
+
+
+  </div> -->
+
+  <!-- <div id="reset">reset/change level</div><br><br> -->
+
+
+  <!-- <div id="instructions"><h3 id="howtoplay">how to play</h3><br><p id="howtoplaytext">the <strong>aim of the game</strong> is to clear the board by pressing on the tiles.<br> the trick, the tiles must be clicked in order of frequency from most common to least<br><br>click the right colour and all tiles that colour disappear<br> click the wrong tile and it becomes red and the board is locked for 5 seconds<br>the board needs to be cleared before the time runs out.<br><br> <span id="goodLuck">Good luck!</span></p></div><br><br><br>
+
+  <div id="playerScoreboard">...</div>
   </body>
-</html>
+</html> -->
