randomised grid achieved

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <main>
     <h1>Seeing Red</h1>
     <ul class="grid">
-      <li class="red"></li>
-      <li class="green"></li>
-      <li class="black"></li>
-      <li class="red"></li>
+      <!-- <li class="red"></li>
+      <li class="lightPurple"></li>
+      <li class="skyBlue"></li>
+      <li class="lightBabyBlue"></li>
       <li class="orange"></li>
       <li class="red"></li>
       <li class="blue"></li>
@@ -25,7 +25,7 @@
       <li class="green"></li>
       <li class="red"></li>
       <li class="blue"></li>
-      <li class="orange"></li>
+      <li class="orange"></li> -->
     </ul>
     <div class="create_grid">Create Grid</div>
   </main>
