--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <main>
     <h1>Seeing Red</h1>
-    <p class=play></p>
+    <p class=play>Play</p>
+    <p class=score>0</p>
     <p class=clickme></p>
     <h2 class ="create_grid" id="small">Small (10x10)</h2>
     <h2 class="create_grid" id ="medium">Medium (25X25)</h2>
