--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <main>
     <h1>Seeing Red</h1>
     <p class=play>Play</p>
+    <p class=countdown></p>
     <p class=score>0</p>
-    <p class=clickme></p>
+    <p class =lives>0</p>
+    <!-- <p class=clickme></p> -->
     <h2 class ="create_grid" id="small">Small (10x10)</h2>
-    <h2 class="create_grid" id ="medium">Medium (25X25)</h2>
+    <h2 class="create_grid" id ="medium">Medium (20X20)</h2>
     <h2 class="create_grid" id="large">Large (50X50)</h2>
     <ul class="grid">
 
