--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <head>
   <title>Intermediate jQuery</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- <script type="text/javascript" src="./js/jquery-2.1.1.min.js"></script> -->
   <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
   <main>
-    <h1>Seeing Red</h1>
-    <p class=play>Play</p>
+    <h1 class="animated flipInX">Seeing Red</h1>
+    <button class=play>Play</button>
     <p class=countdown></p>
+    <p class=playerscore></p>
     <p class=score>0</p>
     <p class =lives>0</p>
+    <p class =level>0</p>
     <!-- <p class=clickme></p> -->
     <h2 class ="create_grid" id="small">Small (10x10)</h2>
     <h2 class="create_grid" id ="medium">Medium (20X20)</h2>
