--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
   <main>
-    <h1 class="animated flipInX">Seeing Red</h1>
-    <button class=play>Play</button>
+    <h1 class="animated rollIn">Seeing Red</h1>
+    <!-- <button class=play>Play</button> -->
     <p class=countdown></p>
     <p class=playerscore></p>
     <p class=score>0</p>
     <p class =lives>0</p>
     <p class =level>0</p>
     <!-- <p class=clickme></p> -->
-    <h2 class ="create_grid" id="small">Small (10x10)</h2>
-    <h2 class="create_grid" id ="medium">Medium (20X20)</h2>
-    <h2 class="create_grid" id="large">Large (50X50)</h2>
+    <!-- <h2 class ="create_grid" id="small">Small (10x10)</h2> -->
+    <h2 class="create_grid" id ="medium">Play (20X20)</h2>
+    <!-- <h2 class="create_grid" id="large">Large (50X50)</h2> -->
     <ul class="grid">
 
     </ul>
