grid background now white on play

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
   <main>
-    <h1 class="animated rollIn">Seeing Red</h1>
+    <h1 class="animated infinite pulse">Seeing Red</h1>
+    <h2 class="create_grid" id ="medium">Play (20X20)</h2>
+    <h3 class="about">About</h3>
+    <p class=scoreboard>0</p>
     <!-- <button class=play>Play</button> -->
-    <p class=countdown></p>
-    <p class=playerscore></p>
-    <p class=score>0</p>
-    <p class =lives>0</p>
-    <p class =level>0</p>
+    <!-- <p class=countdown></p> -->
+    <!-- <p class=score>0</p> -->
+
+    <!-- <p class =lives>0</p> -->
+    <!-- <p class =level>0</p> -->
     <!-- <p class=clickme></p> -->
     <!-- <h2 class ="create_grid" id="small">Small (10x10)</h2> -->
-    <h2 class="create_grid" id ="medium">Play (20X20)</h2>
+
     <!-- <h2 class="create_grid" id="large">Large (50X50)</h2> -->
     <ul class="grid">
-
     </ul>
-    <h3 class=about></h3>
     <audio id="audio" src="#"></audio>
-
   </main>
 </body>
 </html>
