setInterval now in if statements and stop when board clear

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <!-- <h2 class ="create_grid" id="small">Small (10x10)</h2> -->
 
     <!-- <h2 class="create_grid" id="large">Large (50X50)</h2> -->
-    <ul class="grid">
+    <div class ="circle">
+      <ul class="grid">
     </ul>
+  </div>
     <audio id="audio" src="#"></audio>
+
   </main>
 </body>
 </html>
