game over and reset on play again working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <main>
     <h1 class="animated infinite pulse">Seeing Red</h1>
-    <h2 class="create_grid" id ="medium">Play (20X20)</h2>
+    <h2 class="create_grid" id ="medium">Play Standard</h2>
+    <!-- <h2 class="create_grid" id ="redGreen">Play Red Green</h2> -->
     <h3 class="about">About</h3>
     <p class=scoreboard>0</p>
     <!-- <button class=play>Play</button> -->
@@ -23,10 +24,10 @@
     <!-- <h2 class ="create_grid" id="small">Small (10x10)</h2> -->
 
     <!-- <h2 class="create_grid" id="large">Large (50X50)</h2> -->
-    <div class ="circle">
+
       <ul class="grid">
     </ul>
-  </div>
+  
     <audio id="audio" src="#"></audio>
 
   </main>
