restart and intro

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <main>
     <h1 class="animated infinite pulse">Seeing Red</h1>
     <h2 class="create_grid" id ="medium">Play Standard</h2>
+    <h2 id="restart">Restart</h2>
     <!-- <h2 class="create_grid" id ="redGreen">Play Red Green</h2> -->
-    <h3 class="about">About</h3>
+    <h3 class="about">colors are fading away. sometimes one at time, sometimes all in one go<br> try to keep them vibrant. <br>click black spots and each time you do new spots will be added at the top of the board.</h3>
     <p class=scoreboard>0</p>
     <!-- <button class=play>Play</button> -->
     <!-- <p class=countdown></p> -->
@@ -27,7 +28,7 @@
 
       <ul class="grid">
     </ul>
-  
+
     <audio id="audio" src="#"></audio>
 
   </main>
